// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input demo -- input 1`] = `
.emotion-114 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-114.uc-fe-input-block {
  display: block;
}

.emotion-114 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-114 input,
.emotion-114 input:hover,
.emotion-114 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-114:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-114 input {
  line-height: 26px;
  height: 26px;
}

.emotion-114 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-114 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-114 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-114 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-112 {
  display: table;
  width: 100%;
}

.emotion-110 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-110 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-39 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-39:hover {
  border-color: #3357df;
}

.emotion-39:hover .emotion-36 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-39 .emotion-36 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-39 .emotion-34 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-39 .emotion-38 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-39 .emotion-30,
.emotion-39 .emotion-32 {
  line-height: 16px;
}

.emotion-39 .emotion-30 {
  padding-right: 20px;
}

.emotion-39 .emotion-32 {
  padding-left: 20px;
}

.emotion-39 .emotion-30 {
  display: none;
}

.emotion-37 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-29 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-31 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-35 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-33 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-114 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-114.uc-fe-input-block {
  display: block;
}

.emotion-114 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-114 input,
.emotion-114 input:hover,
.emotion-114 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-114:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-114 input {
  line-height: 26px;
  height: 26px;
}

.emotion-114 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-114 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-114 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-114 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-112 {
  display: table;
  width: 100%;
}

.emotion-110 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-110 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-39 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-39:hover {
  border-color: #3357df;
}

.emotion-39:hover .emotion-36 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-39 .emotion-36 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-39 .emotion-34 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-39 .emotion-38 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-39 .emotion-30,
.emotion-39 .emotion-32 {
  line-height: 16px;
}

.emotion-39 .emotion-30 {
  padding-right: 20px;
}

.emotion-39 .emotion-32 {
  padding-left: 20px;
}

.emotion-39 .emotion-30 {
  display: none;
}

.emotion-37 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-29 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-31 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-35 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-33 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-110 emotion-111"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="emotion-18 emotion-72"
        >
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        prefix
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class=" emotion-39 emotion-40"
        >
          <div
            class="emotion-37 emotion-38"
          >
            <span
              class="emotion-29 emotion-30"
            >
              ON
            </span>
            <span
              class="emotion-31 emotion-32"
            >
              OFF
            </span>
            <span
              class="emotion-35 emotion-36"
            >
              <span
                class="emotion-33 emotion-34"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        suffix
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class=" emotion-39 emotion-40"
        >
          <div
            class="emotion-37 emotion-38"
          >
            <span
              class="emotion-29 emotion-30"
            >
              ON
            </span>
            <span
              class="emotion-31 emotion-32"
            >
              OFF
            </span>
            <span
              class="emotion-35 emotion-36"
            >
              <span
                class="emotion-33 emotion-34"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class=" emotion-39 emotion-40"
        >
          <div
            class="emotion-37 emotion-38"
          >
            <span
              class="emotion-29 emotion-30"
            >
              ON
            </span>
            <span
              class="emotion-31 emotion-32"
            >
              OFF
            </span>
            <span
              class="emotion-35 emotion-36"
            >
              <span
                class="emotion-33 emotion-34"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        block
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class=" emotion-39 emotion-40"
        >
          <div
            class="emotion-37 emotion-38"
          >
            <span
              class="emotion-29 emotion-30"
            >
              ON
            </span>
            <span
              class="emotion-31 emotion-32"
            >
              OFF
            </span>
            <span
              class="emotion-35 emotion-36"
            >
              <span
                class="emotion-33 emotion-34"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-114 emotion-115"
    >
      <span
        class="emotion-112 emotion-113"
      >
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-disabled 1`] = `
.emotion-8 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-8.uc-fe-input-block {
  display: block;
}

.emotion-8 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-8 input,
.emotion-8 input:hover,
.emotion-8 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-8:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-8 input {
  line-height: 26px;
  height: 26px;
}

.emotion-8 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-8 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-8 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-8 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 {
  display: table;
  width: 100%;
}

.emotion-0 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-left: 8px;
}

.emotion-4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-2 {
  vertical-align: baseline;
}

.emotion-18 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  box-shadow: none;
}

.emotion-18.uc-fe-input-block {
  display: block;
}

.emotion-18 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-18 input,
.emotion-18 input:hover,
.emotion-18 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-18:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-18 input {
  line-height: 26px;
  height: 26px;
}

.emotion-18 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18,
.emotion-18:hover {
  color: #cccccc;
  -webkit-text-fill-color: currentcolor;
  border-color: #cccccc;
  background: #f7f7f7;
}

.emotion-18 .emotion-5,
.emotion-18 .emotion-1 {
  color: inherit;
}

.emotion-8 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-8.uc-fe-input-block {
  display: block;
}

.emotion-8 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-8 input,
.emotion-8 input:hover,
.emotion-8 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-8:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-8 input {
  line-height: 26px;
  height: 26px;
}

.emotion-8 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-8 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-8 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-8 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 {
  display: table;
  width: 100%;
}

.emotion-0 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-left: 8px;
}

.emotion-4 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-2 {
  vertical-align: baseline;
}

.emotion-18 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  box-shadow: none;
}

.emotion-18.uc-fe-input-block {
  display: block;
}

.emotion-18 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-18 input,
.emotion-18 input:hover,
.emotion-18 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-18:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-18 input {
  line-height: 26px;
  height: 26px;
}

.emotion-18 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18,
.emotion-18:hover {
  color: #cccccc;
  -webkit-text-fill-color: currentcolor;
  border-color: #cccccc;
  background: #f7f7f7;
}

.emotion-18 .emotion-5,
.emotion-18 .emotion-1 {
  color: inherit;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-8 emotion-9"
    >
      <span
        class="emotion-6 emotion-7"
      >
        <span
          class="emotion-0 emotion-1"
        >
          search
        </span>
        <input
          value="default value"
        />
        <span
          class="emotion-4 emotion-5"
        >
          <i
            class="uc-fe-icon icon__search emotion-2 emotion-3"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-18 emotion-9"
      disabled=""
    >
      <span
        class="emotion-6 emotion-7"
      >
        <span
          class="emotion-0 emotion-1"
        >
          search
        </span>
        <input
          disabled=""
          value="default value"
        />
        <span
          class="emotion-4 emotion-5"
        >
          <i
            class="uc-fe-icon icon__search emotion-2 emotion-3"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-18 emotion-9"
      disabled=""
    >
      <span
        class="emotion-6 emotion-7"
      >
        <span
          class="emotion-0 emotion-1"
        >
          <i
            class="uc-fe-icon icon__search emotion-2 emotion-3"
          />
        </span>
        <input
          disabled=""
          value="default value"
        />
        <span
          class="emotion-4 emotion-5"
        >
          search
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-icon 1`] = `
.emotion-6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-6.uc-fe-input-block {
  display: block;
}

.emotion-6 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-6 input,
.emotion-6 input:hover,
.emotion-6 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-6:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-6 input {
  line-height: 26px;
  height: 26px;
}

.emotion-6 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 {
  display: table;
  width: 100%;
}

.emotion-2 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-0 {
  vertical-align: baseline;
}

.emotion-6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-6.uc-fe-input-block {
  display: block;
}

.emotion-6 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-6 input,
.emotion-6 input:hover,
.emotion-6 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-6:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-6 input {
  line-height: 26px;
  height: 26px;
}

.emotion-6 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 {
  display: table;
  width: 100%;
}

.emotion-2 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-0 {
  vertical-align: baseline;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-6 emotion-7"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <input />
        <span
          class="emotion-2 emotion-3"
        >
          <i
            class="uc-fe-icon icon__circle-fill emotion-0 emotion-1"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-6 emotion-7"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <input />
        <span
          class="emotion-2 emotion-3"
        >
          <i
            class="uc-fe-icon icon__circle emotion-0 emotion-1"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-6 emotion-7"
    >
      <span
        class="emotion-4 emotion-5"
      >
        <input />
        <span
          class="emotion-2 emotion-3"
        >
          <i
            class="uc-fe-icon icon__loading emotion-0 emotion-1"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-prefix 1`] = `
.emotion-4 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-4.uc-fe-input-block {
  display: block;
}

.emotion-4 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-4 input,
.emotion-4 input:hover,
.emotion-4 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-4:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-4 input {
  line-height: 26px;
  height: 26px;
}

.emotion-4 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  display: table;
  width: 100%;
}

.emotion-0 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-left: 8px;
}

.emotion-6 {
  vertical-align: baseline;
}

.emotion-4 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-4.uc-fe-input-block {
  display: block;
}

.emotion-4 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-4 input,
.emotion-4 input:hover,
.emotion-4 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-4:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-4 input {
  line-height: 26px;
  height: 26px;
}

.emotion-4 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  display: table;
  width: 100%;
}

.emotion-0 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-left: 8px;
}

.emotion-6 {
  vertical-align: baseline;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-4 emotion-5"
    >
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-0 emotion-1"
        >
          prefix
        </span>
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-4 emotion-5"
    >
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-0 emotion-1"
        >
          <i
            class="uc-fe-icon icon__search emotion-6 emotion-7"
          />
        </span>
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-4 emotion-5"
      style="width:300px"
    >
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-0 emotion-1"
        >
          prefix
        </span>
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-4 emotion-5"
      style="width:300px"
    >
      <span
        class="emotion-2 emotion-3"
      >
        <span
          class="emotion-0 emotion-1"
        >
          <div
            style="width:50px"
          >
            prefix
          </div>
        </span>
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-size 1`] = `
.emotion-6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-6.uc-fe-input-block {
  display: block;
}

.emotion-6 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-6 input,
.emotion-6 input:hover,
.emotion-6 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-6:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-6 input {
  line-height: 26px;
  height: 26px;
}

.emotion-6 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 {
  display: table;
  width: 100%;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-2.uc-fe-input-block {
  display: block;
}

.emotion-2 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-2 input,
.emotion-2 input:hover,
.emotion-2 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-2:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-2 input {
  line-height: 22px;
  height: 22px;
}

.emotion-2 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 32px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-10.uc-fe-input-block {
  display: block;
}

.emotion-10 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-10 input,
.emotion-10 input:hover,
.emotion-10 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-10:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-10 input {
  line-height: 30px;
  height: 30px;
}

.emotion-10 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-6.uc-fe-input-block {
  display: block;
}

.emotion-6 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-6 input,
.emotion-6 input:hover,
.emotion-6 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-6:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-6 input {
  line-height: 26px;
  height: 26px;
}

.emotion-6 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 {
  display: table;
  width: 100%;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-2.uc-fe-input-block {
  display: block;
}

.emotion-2 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-2 input,
.emotion-2 input:hover,
.emotion-2 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-2:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-2 input {
  line-height: 22px;
  height: 22px;
}

.emotion-2 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 32px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-10.uc-fe-input-block {
  display: block;
}

.emotion-10 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-10 input,
.emotion-10 input:hover,
.emotion-10 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-10:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-10 input {
  line-height: 30px;
  height: 30px;
}

.emotion-10 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-10 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-2 emotion-3"
    >
      <span
        class="emotion-0 emotion-1"
      >
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-6 emotion-3"
    >
      <span
        class="emotion-0 emotion-1"
      >
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-10 emotion-3"
    >
      <span
        class="emotion-0 emotion-1"
      >
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-status 1`] = `
.emotion-2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-2.uc-fe-input-block {
  display: block;
}

.emotion-2 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-2 input,
.emotion-2 input:hover,
.emotion-2 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-2:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-2 input {
  line-height: 26px;
  height: 26px;
}

.emotion-2 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 {
  display: table;
  width: 100%;
}

.emotion-6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-6.uc-fe-input-block {
  display: block;
}

.emotion-6 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-6 input,
.emotion-6 input:hover,
.emotion-6 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-6:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-6 input {
  line-height: 26px;
  height: 26px;
}

.emotion-6 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6.emotion-6.emotion-6 {
  border-color: #f44336;
  background: #fff0f0;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-2.uc-fe-input-block {
  display: block;
}

.emotion-2 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-2 input,
.emotion-2 input:hover,
.emotion-2 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-2:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-2 input {
  line-height: 26px;
  height: 26px;
}

.emotion-2 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-0 {
  display: table;
  width: 100%;
}

.emotion-6 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-6.uc-fe-input-block {
  display: block;
}

.emotion-6 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-6 input,
.emotion-6 input:hover,
.emotion-6 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-6:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-6 input {
  line-height: 26px;
  height: 26px;
}

.emotion-6 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-6.emotion-6.emotion-6 {
  border-color: #f44336;
  background: #fff0f0;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-2 emotion-3"
    >
      <span
        class="emotion-0 emotion-1"
      >
        <input />
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-6 emotion-3"
    >
      <span
        class="emotion-0 emotion-1"
      >
        <input />
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- input-suffix 1`] = `
.emotion-4 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-4.uc-fe-input-block {
  display: block;
}

.emotion-4 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-4 input,
.emotion-4 input:hover,
.emotion-4 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-4:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-4 input {
  line-height: 26px;
  height: 26px;
}

.emotion-4 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  display: table;
  width: 100%;
}

.emotion-0 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-6 {
  vertical-align: baseline;
}

.emotion-4 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-4.uc-fe-input-block {
  display: block;
}

.emotion-4 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-4 input,
.emotion-4 input:hover,
.emotion-4 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-4:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-4 input {
  line-height: 26px;
  height: 26px;
}

.emotion-4 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-4 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-2 {
  display: table;
  width: 100%;
}

.emotion-0 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-6 {
  vertical-align: baseline;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-4 emotion-5"
    >
      <span
        class="emotion-2 emotion-3"
      >
        <input />
        <span
          class="emotion-0 emotion-1"
        >
          suffix
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-4 emotion-5"
    >
      <span
        class="emotion-2 emotion-3"
      >
        <input />
        <span
          class="emotion-0 emotion-1"
        >
          <i
            class="uc-fe-icon icon__search emotion-6 emotion-7"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search 1`] = `
.emotion-56 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-56.uc-fe-input-block {
  display: block;
}

.emotion-56 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-56 input,
.emotion-56 input:hover,
.emotion-56 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-56:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-56 input {
  line-height: 26px;
  height: 26px;
}

.emotion-56 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-56 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-56 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-56 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-54 {
  display: table;
  width: 100%;
}

.emotion-52 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-47 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-47 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-39 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-39:hover {
  border-color: #3357df;
}

.emotion-39:hover .emotion-36 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-39 .emotion-36 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-39 .emotion-34 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-39 .emotion-38 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-39 .emotion-30,
.emotion-39 .emotion-32 {
  line-height: 16px;
}

.emotion-39 .emotion-30 {
  padding-right: 20px;
}

.emotion-39 .emotion-32 {
  padding-left: 20px;
}

.emotion-39 .emotion-30 {
  display: none;
}

.emotion-37 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-29 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-31 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-35 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-33 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-50 {
  vertical-align: baseline;
  cursor: pointer;
}

.emotion-56 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-56.uc-fe-input-block {
  display: block;
}

.emotion-56 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-56 input,
.emotion-56 input:hover,
.emotion-56 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-56:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-56 input {
  line-height: 26px;
  height: 26px;
}

.emotion-56 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-56 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-56 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-56 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-54 {
  display: table;
  width: 100%;
}

.emotion-52 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-47 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-47 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-24 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-24:before,
.emotion-24:after {
  content: ' ';
  display: table;
}

.emotion-24:after {
  clear: both;
}

.emotion-24 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-21 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-18 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-18 .uc-fe-radio-styletype-default,
.emotion-18 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-default:last-child,
.emotion-18 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-18 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-18 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-18 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-18 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-6 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-6 > * {
  font-size: 12px;
}

.emotion-6 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-6 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-6 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-6:hover .uc-fe-radio-icon-wrap,
.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-6.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-6.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-6.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-6.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-3 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-39 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-39:hover {
  border-color: #3357df;
}

.emotion-39:hover .emotion-36 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-39 .emotion-36 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-39 .emotion-34 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-39 .emotion-38 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-39 .emotion-30,
.emotion-39 .emotion-32 {
  line-height: 16px;
}

.emotion-39 .emotion-30 {
  padding-right: 20px;
}

.emotion-39 .emotion-32 {
  padding-left: 20px;
}

.emotion-39 .emotion-30 {
  display: none;
}

.emotion-37 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-29 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-31 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-35 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-33 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-50 {
  vertical-align: baseline;
  cursor: pointer;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-47 emotion-48"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class="emotion-18 emotion-72"
        >
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-5 emotion-6 emotion-7"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-3 emotion-4"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              lg
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-23 emotion-24 emotion-25"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        disabled
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-20 emotion-21 emotion-2"
        span="9"
      >
        <div
          class=" emotion-39 emotion-40"
        >
          <div
            class="emotion-37 emotion-38"
          >
            <span
              class="emotion-29 emotion-30"
            >
              ON
            </span>
            <span
              class="emotion-31 emotion-32"
            >
              OFF
            </span>
            <span
              class="emotion-35 emotion-36"
            >
              <span
                class="emotion-33 emotion-34"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-56 emotion-57"
    >
      <span
        class="emotion-54 emotion-55"
      >
        <input />
        <span
          class="emotion-52 emotion-53"
        >
          <i
            class="uc-fe-icon icon__search emotion-49 emotion-50 emotion-51"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-disabled 1`] = `
.emotion-16 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-16.uc-fe-input-block {
  display: block;
}

.emotion-16 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-16 input,
.emotion-16 input:hover,
.emotion-16 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-16:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-16 input {
  line-height: 26px;
  height: 26px;
}

.emotion-16 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 {
  display: table;
  width: 100%;
}

.emotion-3 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  box-shadow: none;
}

.emotion-7.uc-fe-input-block {
  display: block;
}

.emotion-7 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-7 input,
.emotion-7 input:hover,
.emotion-7 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-7:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-7 input {
  line-height: 26px;
  height: 26px;
}

.emotion-7 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7,
.emotion-7:hover {
  color: #cccccc;
  -webkit-text-fill-color: currentcolor;
  border-color: #cccccc;
  background: #f7f7f7;
}

.emotion-7 .emotion-4,
.emotion-7 .e1yp5lnq1 {
  color: inherit;
}

.emotion-1 {
  vertical-align: baseline;
  cursor: pointer;
}

.emotion-16 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-16.uc-fe-input-block {
  display: block;
}

.emotion-16 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-16 input,
.emotion-16 input:hover,
.emotion-16 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-16:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-16 input {
  line-height: 26px;
  height: 26px;
}

.emotion-16 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 {
  display: table;
  width: 100%;
}

.emotion-3 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  box-shadow: none;
}

.emotion-7.uc-fe-input-block {
  display: block;
}

.emotion-7 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-7 input,
.emotion-7 input:hover,
.emotion-7 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-7:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-7 input {
  line-height: 26px;
  height: 26px;
}

.emotion-7 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7,
.emotion-7:hover {
  color: #cccccc;
  -webkit-text-fill-color: currentcolor;
  border-color: #cccccc;
  background: #f7f7f7;
}

.emotion-7 .emotion-4,
.emotion-7 .e1yp5lnq1 {
  color: inherit;
}

.emotion-1 {
  vertical-align: baseline;
  cursor: pointer;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-7 emotion-8"
      disabled=""
    >
      <span
        class="emotion-5 emotion-6"
      >
        <input
          disabled=""
        />
        <span
          class="emotion-3 emotion-4"
        >
          <i
            class="uc-fe-icon icon__search emotion-0 emotion-1 emotion-2"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-16 emotion-8"
    >
      <span
        class="emotion-5 emotion-6"
      >
        <input />
        <span
          class="emotion-3 emotion-4"
        >
          <i
            class="uc-fe-icon icon__search emotion-0 emotion-1 emotion-2"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`Input demo -- search-size 1`] = `
.emotion-16 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-16.uc-fe-input-block {
  display: block;
}

.emotion-16 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-16 input,
.emotion-16 input:hover,
.emotion-16 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-16:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-16 input {
  line-height: 26px;
  height: 26px;
}

.emotion-16 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 {
  display: table;
  width: 100%;
}

.emotion-3 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-7.uc-fe-input-block {
  display: block;
}

.emotion-7 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-7 input,
.emotion-7 input:hover,
.emotion-7 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-7:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-7 input {
  line-height: 22px;
  height: 22px;
}

.emotion-7 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-25 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 32px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-25.uc-fe-input-block {
  display: block;
}

.emotion-25 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-25 input,
.emotion-25 input:hover,
.emotion-25 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-25:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-25 input {
  line-height: 30px;
  height: 30px;
}

.emotion-25 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-25 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-25 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-25 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-1 {
  vertical-align: baseline;
  cursor: pointer;
}

.emotion-16 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-16.uc-fe-input-block {
  display: block;
}

.emotion-16 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-16 input,
.emotion-16 input:hover,
.emotion-16 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-16:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-16 input {
  line-height: 26px;
  height: 26px;
}

.emotion-16 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-16 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 {
  display: table;
  width: 100%;
}

.emotion-3 {
  vertical-align: middle;
  display: table-cell;
  width: 1px;
  padding-right: 8px;
}

.emotion-7 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 24px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-7.uc-fe-input-block {
  display: block;
}

.emotion-7 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-7 input,
.emotion-7 input:hover,
.emotion-7 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-7:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-7 input {
  line-height: 22px;
  height: 22px;
}

.emotion-7 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-7 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-25 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 32px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-25.uc-fe-input-block {
  display: block;
}

.emotion-25 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-25 input,
.emotion-25 input:hover,
.emotion-25 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-25:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-25 input {
  line-height: 30px;
  height: 30px;
}

.emotion-25 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-25 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-25 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-25 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-1 {
  vertical-align: baseline;
  cursor: pointer;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-7 emotion-8"
    >
      <span
        class="emotion-5 emotion-6"
      >
        <input />
        <span
          class="emotion-3 emotion-4"
        >
          <i
            class="uc-fe-icon icon__search emotion-0 emotion-1 emotion-2"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-16 emotion-8"
    >
      <span
        class="emotion-5 emotion-6"
      >
        <input />
        <span
          class="emotion-3 emotion-4"
        >
          <i
            class="uc-fe-icon icon__search emotion-0 emotion-1 emotion-2"
          />
        </span>
      </span>
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="uc-fe-input emotion-25 emotion-8"
    >
      <span
        class="emotion-5 emotion-6"
      >
        <input />
        <span
          class="emotion-3 emotion-4"
        >
          <i
            class="uc-fe-icon icon__search emotion-0 emotion-1 emotion-2"
          />
        </span>
      </span>
    </span>
  </div>
</div>
`;
